--- a/views/viewBloodBank.html
+++ b/views/viewBloodBank.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="/static/style/tables.css">
 
     <!-- local scripts -->
-    <script src="/scripts/main.js"></script>
-    <script src="scripts/bloob-bank-table.js"></script>
+    <script src="/static/scripts/main.js"></script>
+    <script src="/static/scripts/bloob-bank-table.js"></script>
 
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
