--- a/views/viewDonors.html
+++ b/views/viewDonors.html
@@ -48,13 +48,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="donateBlood">Donate</a>
+                    <a class="nav-link" href="/views/donateBlood">Donate</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="hospitalOrder">Order blood units</a>
+                    <a class="nav-link" href="/views/hospitalOrder">Order blood units</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="MCI">Multiple Casualty Incident</a>
+                    <a class="nav-link" href="/views/MCI">Multiple Casualty Incident</a>
                 </li>
             </ul>
             <div class="dropdown">
@@ -64,9 +64,9 @@
                     View tables
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="viewDonors" style="font-weight: bold;">Donors</a>
-                    <a class="dropdown-item" href="viewHospitalUse">Hospital Orders</a>
-                    <a class="dropdown-item" href="viewBloodBank">Blood bank</a>
+                    <a class="dropdown-item" href="/views/viewDonors" style="font-weight: bold;">Donors</a>
+                    <a class="dropdown-item" href="/views/viewHospitalUse">Hospital Orders</a>
+                    <a class="dropdown-item" href="/views/viewBloodBank">Blood bank</a>
                 </div>
             </div>
         </div>
