--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MedTech-The Future Health</title>
     <link rel="stylesheet" href="../static/style.css">
-    <link rel="stylesheet" href="/static/index.js">
+    <!-- <link rel="script" src="/views/index.js"> -->
+    <script src="/views/index.js"></script>
     <link rel="icon" href="/static/img/logo.png">
     <link rel="stylesheet" href="../app.js">
 
@@ -316,6 +317,9 @@
             <div class="images">
                 <img src="/static/img/bb_img1.png" alt="blood bank img">
             </div>
+            <div class="image_2">
+                <img src="/static/img/blood_bank_img2.jpg" alt="">
+            </div>
 
         </div>
         <div>
@@ -379,7 +383,7 @@
             <h1>Contact Us</h1>
         </div>
         <div id="contact-box">
-            <form action="/contact" method="post" class="myform">
+            <form id="contactForm" action="/contact" method="post" class="myform">
                 <div class="form-group">
                     <label for="name">Name: </label>
                     <input type="text" name="name" id="name" placeholder="Enter your name">
@@ -396,9 +400,13 @@
                     <label for="message">Message: </label>
                     <textarea name="message" id="message" cols="30" rows="10"></textarea>
                 </div>
-                <button class="btn">submit
+                <button class="btn" type="submit">submit
 
                 </button>
+                <button class="btn" type="reset">Reset
+
+                </button>
+                <!-- <script src="index.js"></> -->
             </form>
         </div>
     </section>
