--- a/views/index.html
+++ b/views/index.html
@@ -21,11 +21,12 @@
 
     <!-- <section id="introduction" class="section"> -->
     <nav class="navbar">
+        <!-- <a href="#about us"> -->
 
-
-        <div class="logo">
-            <img src="static/img/logo.png" alt="">
-        </div>
+            <div class="logo">
+                <img src="static/img/logo.png" alt="logo.img">
+            </div>
+        <!-- </a> -->
         <a href="/">Home</a>
         <a href="#services">Services</a>
         <a href="#contact">Contact</a>
@@ -33,7 +34,7 @@
         <!-- <a href="#start">Medicine</a> -->
         <!-- <a href="#blood_Bank">Blood Bank</a> -->
         <div>
-            <button onclick="myFunction()" class="btn" id="myBtn">Help line
+            <button onclick="myFunction()" class="glow-on-hover" id="myBtn">Help line
         </div>
         <script>
             function myFunction() {
@@ -90,7 +91,9 @@
         <div class="sevices_3">
             <!-- <div class="sevices_3_box"> -->
             <div class="glow-on-hover" id="sevices_3_box">
-                <a href="#start"><h1>Medicine</h1></a>
+                <a href="#start">
+                    <h1>Medicine</h1>
+                </a>
 
                 <p>my name is sumit</p>
             </div>
@@ -359,6 +362,14 @@
         <div class="Services">
             <h1>Organ donation</h1>
 
+        </div>
+        <div>
+            <nav class="bb_nav">
+
+                <a href="/views/bb">
+                    <button class="bb_btn" id="organ-btn">Explore </button>
+                </a>
+            </nav>
         </div>
     </section>
 
