--- a/static/mobile.css
+++ b/static/mobile.css
@@ -1,4 +1,4 @@
-/* *{
+*{
     margin: 0;
     padding: 0;
 
@@ -38,4 +38,4 @@ a {
     margin: -46px 0px;
     padding: 23px -17p;
     margin-right: 144px;
-} */
+}
