--- a/views/bb.html
+++ b/views/bb.html
@@ -129,7 +129,7 @@
 
     <!-- ---------------------------------------------------------------------------------------------- -->
     <nav class="navbar navbar-expand-xl navbar-light " style="background-color: #ffb5fd;">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="/views/bb.html">
             <img src="/static/assets/images/navbar-blood-drop.svg" width="30" height="30" class="d-inline-block align-top"
                 alt="">
         </a>
