--- a/views/index.html
+++ b/views/index.html
@@ -366,7 +366,7 @@
         <div>
             <nav class="bb_nav">
 
-                <a href="/views/bb">
+                <a href="organ_donation.html">
                     <button class="bb_btn" id="organ-btn">Explore </button>
                 </a>
             </nav>
