--- a/views/donateBlood.html
+++ b/views/donateBlood.html
@@ -38,6 +38,13 @@
         crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <style>
+        .btnclass{
+            border: 1px solid white;
+            color: white;
+            background-color: white;
+        }
+    </style>
 </head>
 
 <body>
@@ -84,7 +91,7 @@
         <div class="wrapper wrapper--w680">
             <div class="card card-4">
                 <div class="card-body">
-                    <h2 class="title">Receiving Blood</h2>
+                    <h2 class="title">Donating Blood</h2>
                     <form action="/blood" method="post">
                         <div class="row row-space">
                             <div class="col-6">
@@ -139,7 +146,8 @@
                         <br>
 
 
-                        <button class="btn btn--pink" >Submit</button>
+                        <button class="btnclass" >Submit</button>
+                        <!-- <button class="btn btn--pink" >Submit</button> -->
 
                         <div class="p-t-15">
                           
