--- a/views/index.html
+++ b/views/index.html
@@ -23,9 +23,9 @@
     <nav class="navbar">
         <!-- <a href="#about us"> -->
 
-            <div class="logo">
-                <img src="static/img/logo.png" alt="logo.img">
-            </div>
+        <div class="logo">
+            <img src="static/img/logo.png" alt="logo.img">
+        </div>
         <!-- </a> -->
         <a href="/">Home</a>
         <a href="#services">Services</a>
@@ -88,25 +88,73 @@
         <div class="Services">
             <h1>Our Services</h1>
         </div>
+
+
         <div class="sevices_3">
             <!-- <div class="sevices_3_box"> -->
             <div class="glow-on-hover" id="sevices_3_box">
                 <a href="#start">
                     <h1>Medicine</h1>
                 </a>
+                <div class="minibox_section">
+                    <div class="minibox-1">
+                        <img src="/static/assets/images/blood-drop.svg" alt="">
+                        <h3>hello my name is sumit</h3>
+                    </div>
+                    <div class="minibox-1">
+                        <img src="/static/assets/images/blood-drop.svg" alt="">
+                        <h3>hello my name is sumit</h3>
+                    </div>
+                    <div class="minibox-1">
+                        <img src="/static/assets/images/blood-drop.svg" alt="">
+                        <h3>hello my name is sumit</h3>
+                    </div>
+                </div>
 
-                <p>my name is sumit</p>
+
             </div>
             <!-- <div class="sevices_3_box"> -->
             <div class="glow-on-hover" id="sevices_3_box">
-                <a href="#blood_Bank">Blood Bank</a>
+                <a href="#blood_Bank">
+                    <h1>Blood Bank</h1>
+                </a>
+                <div class="minibox_section">
+                    <div class="minibox-1">
+                        <img src="/static/assets/images/blood-drop.svg" alt="">
+                        <h3>hello my name is sumit</h3>
+                    </div>
+                    <div class="minibox-1">
+                        <img src="/static/assets/images/blood-drop.svg" alt="">
+                        <h3>hello my name is sumit</h3>
+                    </div>
+                    <div class="minibox-1">
+                        <img src="/static/assets/images/blood-drop.svg" alt="">
+                        <h3>hello my name is sumit</h3>
+                    </div>
+                </div>
 
-                <p>my name is sumit</p>
+
             </div>
             <!-- <div class="sevices_3_box"> -->
             <div class="glow-on-hover" id="sevices_3_box">
-                <a href="#organ_donation">Organ Donation</a>
-                <p>my name is sumit</p>
+                <a href="#organ_donation">
+                    <h1>Organ Donation</h1>
+                </a>
+                <div class="minibox_section">
+                    <div class="minibox-1">
+                        <img src="/static/assets/images/blood-drop.svg" alt="">
+                        <h3>hello my name is sumit</h3>
+                    </div>
+                    <div class="minibox-1">
+                        <img src="/static/assets/images/blood-drop.svg" alt="">
+                        <h3>hello my name is sumit</h3>
+                    </div>
+                    <div class="minibox-1">
+                        <img src="/static/assets/images/blood-drop.svg" alt="">
+                        <h3>hello my name is sumit</h3>
+                    </div>
+                </div>
+
             </div>
         </div>
 
@@ -132,6 +180,15 @@
 
 
 
+        </div>
+        <div class="medicine_content">hello my name is susmit
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum deleniti eum unde corporis repellat corrupti
+            ut officiis voluptatum, fuga doloremque ipsam perspiciatis atque mollitia hic voluptas alias at? Officia,
+            nemo dolorum sit sequi aperiam iure et quis odio, distinctio alias cumque? At possimus facilis temporibus
+            laboriosam? Assumenda iste dignissimos excepturi unde aliquam quisquam ea explicabo voluptas quod, dolorem
+            consectetur officiis minima nihil in voluptates placeat sunt. Expedita vel voluptatem hic culpa est,
+            doloremque neque sequi minus aperiam ipsa provident temporibus excepturi quasi fugit, vitae illum modi
+            omnis? Ad, minus quos! Consectetur modi quos in reiciendis delectus alias, repellendus quod consequuntur.
         </div>
 
 
@@ -254,72 +311,9 @@
                 </div>
 
             </div>
-            <!--<div class="boxes">
-                <div class="inner-box">
-
-
-                </div>
-
-            </div>
-            <div class="boxes">
-                <div class="inner-box">
-
-
-                </div>
-
-            </div>
-            <div class="boxes">
-                <div class="inner-box">
-
-
-                </div>
-
-            </div>
-            <div class="boxes">
-                <div class="inner-box">
-
-
-                </div>
-
-            </div>
-            <div class="boxes">
-                <div class="inner-box">
-
-
-                </div>
-
-            </div>
-            <div class="boxes">
-                <div class="inner-box">
-
-
-                </div>
-
-            </div>
-            <div class="boxes">
-                <div class="inner-box">
-
-
-                </div>
-
-            </div>
-            <div class="boxes">
-                <div class="inner-box">
-
-
-                </div>
-
-            </div>
-            <div class="boxes">
-                <div class="inner-box">
-
-
-                </div>
-
-            </div>
-
-
-        </div>-->
+            < <div class="name">
+                my name
+        </div>
 
 
     </section>
@@ -333,14 +327,21 @@
                 Saves Lives
             </h1>
             <div class="Sub-Tital">
-                <p>Join Our Wonderful Community and start saving Lives. You can become someone's unknown but all
+                <h2>Join Our Wonderful Community and start saving Lives.</h2>
+                <p> You can become someone's unknown but all
                     important Hero.</p>
+
             </div>
-            <div class="images">
-                <img src="/static/img/bb_img1.png" alt="blood bank img">
-            </div>
-            <div class="image_2">
-                <img src="/static/img/blood_bank_img2.jpg" alt="">
+            <div class="image_section">
+                <div id="images_1" class="Image_1">
+                    <img src="/static/img/organ_donation_1.png" alt="">
+                </div>
+                <div id="images_2" class="Image_1">
+                    <img src="/static/img/bb_img1.png" alt="blood bank img">
+                </div>
+                <div id="images_3" class="Image_1">
+                    <img src="/static/img/blood_donation_3.png" alt="">
+                </div>
             </div>
 
         </div>
@@ -363,6 +364,37 @@
             <h1>Organ donation</h1>
 
         </div>
+        <div class="organ-content">
+            <div class="Sub-Tital-organ">
+                <div class="image_section_1">
+                    <div id="images_10" class="Image_3">
+                        <img src="/static/img/organ_img_2.png" alt="">
+                    </div>
+                   
+                </div>
+
+
+            </div>
+            <div class="Sub-Tital-organ">
+                <h2>Donation After Life</h2>
+                <p> When you die, you can give an organ—or part of an organ—to someone in need. You can improve and savelives.</p>
+                <p> When you die, you can give an organ—or part of an organ—to someone in need. You can improve and savelives.</p>
+                <p> When you die, you can give an organ—or part of an organ—to someone in need. You can improve and savelives.</p>
+                <p> When you die, you can give an organ—or part of an organ—to someone in need. You can improve and savelives.</p>
+
+            </div>
+        </div>
+        <!-- <div class="image_section">
+            <div id="images_1" class="Image_1">
+                <img src="/static/img/organ_donation_1.png" alt="">
+            </div>
+            <div id="images_2" class="Image_1">
+                <img src="/static/img/bb_img1.png" alt="blood bank img">
+            </div>
+            <div id="images_3" class="Image_1">
+                <img src="/static/img/blood_donation_3.png" alt="">
+            </div>
+        </div> -->
         <div>
             <nav class="bb_nav">
 
@@ -389,8 +421,8 @@
                         soluta, cumque vero nulla nostrum quasi exercitationem non quia tempora quam ullam
                         architecto,
                         voluptatem libero iste, dolorem reprehenderit excepturi molestias?</h3>
-                    <div class="info-in-servicebox_innerbox">
-                        <img src="/static/img/med1.png" alt="">
+                    <div class="info-in-servicebox_innerbox" id="sumit_img">
+                        <img src="/static/img/sumit.jpg" alt="">
                         My name is sumit sahebrao jagtap
                     </div>
                     <div class="info-in-servicebox_innerbox">
@@ -441,13 +473,13 @@
         </div>
     </section>
 
-    <!-- <section class="footer">
-        <footer>
-            <div class="center">
-                Copyright &copy; www.MedTech.com. All rights reserved!
-            </div>
-        </footer>
-    </section> -->
+    <footer>
+
+
+        Copyright &copy; www.MedTech.com. All rights reserved!
+
+
+    </footer>
 
 </body>
 
